Fix letter tails being cut off in box headers
Also remove obsolete touch tutorial styling

--- a/resources/main.css
+++ b/resources/main.css
@@ -611,7 +611,7 @@ dl dt {
 
 .box .box-header h4,
 .box .box-header h5 {
-    line-height: 1.1rem;
+    line-height: normal;
     font-size: 1.1rem;
 }
 
@@ -887,25 +887,6 @@ dl dt {
 }
 
 /* Mobile design */
-
-.touch-tutorial {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 13;
-    background-color: rgba(255, 255, 255, 0.5);
-    text-align: center;
-    line-height: 100vh;
-    text-shadow: white 0 0 1px;
-    font-size: 5vh;
-}
-.touch-tutorial span {
-    display: inline-block;
-    line-height: normal;
-    vertical-align: middle;
-}
 
 @media only screen and (max-width: 519.4px) {
     .inner {
